# trending-songs-databricks-auto-loader

./: README.md  databricks.yml  main.py  pyproject.toml
data/: trending_song_2026-04-18.parquet
resources/: jobs.yml  pipelines.yml
src/: extract_songs.py  load_files.py
src/autoloader_folder/transformations/: ingest_songs_files.py
src/songs_transaformation/transformations/: bronze_layer.sql  gold_layer.sql  gold_top_artists.sql  gold_top_songs.sql  silver_layer.sql
src/songs_transformation/transformations/: gold_layer.sql  gold_top_artists.sql  gold_top_songs.sql  silver_layer.sql
