[project]
name = "insert-gcs-github-events"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastparquet>=2026.3.0",
    "google-cloud-storage>=3.10.1",
    "lxml>=6.1.0",
    "pandas>=3.0.2",
    "requests>=2.33.1",
]
